# dotfiles

./: .gitignore  .proxyrc  .vimrc  .zshrc  config_load.sh  foreignpkglist.txt  pkglist.txt  razer-dpi.py
.config/Thunar/: uca.xml
.config/alacritty/: alacritty.toml
.config/aria2/: aria2.conf
.config/fcitx5/conf/: rime.conf
.config/hypr/: hypridle.conf  hyprland.lua  hyprlock.conf  hyprpaper.conf
.config/hypr/hyprland/: env.lua  execs.lua  input.lua  keybinds.lua  look_and_feel.lua  monitors.lua  permissions.lua  plugins.lua  rules.lua
.config/hypr/scripts/: cliphist-wofi.sh
.config/hypr/scripts/wallpaper/: wallpaper_choose.sh  wallpaper_random.sh  wofi-wallpaper-selector.sh
.config/ly/: hyprland-uwsm.desktop
.config/mako/: config
.config/pipewire/: pipewire.conf
.config/pipewire/pipewire.conf.d/: source-rnnoise.conf
.config/uwsm/: env  env-hyprland
.config/waybar/: config copy.jsonc  config.jsonc  style.css
.config/waybar/scripts/: media-info.sh  media-play-pause.sh  power-menu
.local/share/fonts/: download_fonts.sh
.zsh/: config_zsh.sh
install_file/: CLAUDE.md
install_file/qq/: PKGBUILD
install_file/throne/: .install  PKGBUILD
install_file/waybar/: PKGBUILD  lua-ipc-trimmed.patch
install_file/wechat/: PKGBUILD
install_file/zotero/: PKGBUILD
xlogout/: CMakeLists.txt
xlogout/src/: power-menu.c
